# chatbot

./: .dockerignore  .env.example  .gitignore  .lefthook.yml  .mise.toml  CLAUDE.md  Cross.toml  Dockerfile  README.md  biome.json  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml  publish-npm.yml  release.yml
npm/: .gitignore
scripts/: install-cli.sh  install.sh  verify-install-channels.sh
scripts/local_python_chat/: .env.example  .gitignore  README.md  chat.py  download.py  pyproject.toml  setup.sh
scripts/remote_rust_chat/: .env.example  Cargo.toml  setup.sh
scripts/remote_rust_chat/src/: main.rs
