[package]
name = "remote-rust-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
rodio = "0.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
hound = "3.5"
futures-util = "0.3"
anyhow = "1"
ctrlc = "3.4"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
flate2 = "1"
